# src/docs/swagger.yaml
@@ -1,4 +1,20 @@
 definitions:
+  dto.CountryResponse:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  dto.CreateUpdateCountryRequest:
+    properties:
+      name:
+        maxLength: 20
+        minLength: 3
+        type: string
+    required:
+    - name
+    type: object
   dto.GetOtpRequest:
     properties:
       mobile_number:
@@ -96,6 +112,134 @@ definitions:
 info:
   contact: {}
 paths:
+  /v1/countries:
+    post:
+      consumes:
+      - application/json
+      description: Create a Country
+      parameters:
+      - description: Create a Country
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateUpdateCountryRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Country response
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/dto.CountryResponse'
+              type: object
+        "400":
+          description: Failure
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Create a Country
+      tags:
+      - Countries
+  /v1/countries/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a Country
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Success
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+        "400":
+          description: Failure
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Delete a Country
+      tags:
+      - Countries
+    get:
+      consumes:
+      - application/json
+      description: Get a Country
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Country response
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/dto.CountryResponse'
+              type: object
+        "400":
+          description: Failure
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get a Country
+      tags:
+      - Countries
+    put:
+      consumes:
+      - application/json
+      description: Update a Country
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update a Country
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateUpdateCountryRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Country response
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/dto.CountryResponse'
+              type: object
+        "400":
+          description: Failure
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Update a Country
+      tags:
+      - Countries
   /v1/health/:
     get:
       consumes:
@@ -260,4 +404,9 @@ paths:
       summary: Send Otp To User
       tags:
       - users
+securityDefinitions:
+  AuthBearer:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
